# EnveloppeConvexe

./: CMakeLists.txt  Point.cpp  Point.h  Polygone.cpp  Polygone.h  README.md  Sommet.cpp  Sommet.h  main.cpp
